fixed bug where rows were overlapping each other.

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
   
   .description{
     white-space: pre-wrap;
+    border-top: 1px solid #000000;
   }
   
   .time-block{
@@ -32,7 +33,6 @@ body {
   
   .row {
     white-space: pre-wrap;
-    height: 80px;
     border-top: 1px solid white;;
   }
   
@@ -61,6 +61,7 @@ body {
     border-left: 1px solid black;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
+    border-color: #000000;
     background-color: #06AED5;
     color: white;
   }
